[package]
name = "open_t5"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Fingerlingus/OpenT5"
license-file = "LICENSE"
description = "An open-source Rust reimplementation of T5 (the engine running Call of Duty Black Ops)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "open_t5"
path = "src/main.rs"

[dependencies]
libc = "0.2.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
num = "0.4.0"
arrayvec = "0.7.2"
env_logger = "0.10.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pollster = "0.2"
cfg-if="1.0.0"
raw-window-handle="0.5.0"
sscanf = "0.4.0"
winit = "0.28.1"
gilrs = { version = "0.10.0" }
eframe = { version = "0.21.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows =  { version = "0.43.0", features = [
            "Win32_Foundation", "Win32_Security",
            "Win32_Graphics_Gdi", "Win32_UI_Controls",
            "Win32_System_Threading","Win32_System_LibraryLoader", 
            "Win32_System_Environment", "Win32_UI_WindowsAndMessaging",
            "Win32_UI_Input_KeyboardAndMouse", 
            "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", 
            "Win32_System_Memory", "Win32_Storage_FileSystem", 
            "Win32_UI_Shell"] }

[target.'cfg(unix)'.dependencies]
nix = "0.26.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.15.0"
sysinfo = "0.27.0"
discord-rich-presence = "0.2.3"

[features]
default = []
windows_force_egui = ["eframe"]