[package]
name = "open_t5"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Ashlyyn/OpenT5"
license = "MIT"
description = "An open-source Rust reimplementation of T5 (the engine running Call of Duty Black Ops)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "open_t5_sp"
path = "engine/src/main.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
engine = { path = "./engine" }

[features]
default = []
linux_use_xlib = [ "engine/linux_use_xlib" ]
linux_use_wayland = [ "engine/linux_use_wayland" ]
linux_use_vulkan = [ "engine/linux_use_vulkan" ]
linux_use_wgpu = [ "engine/linux_use_wgpu" ]
macos_use_xlib = [ "engine/macos_use_xlib" ]
macos_use_appkit = [ "engine/macos_use_appkit" ]
macos_use_metal = [ "engine/macos_use_metal" ]
macos_use_vulkan = [ "engine/macos_use_vulkan" ]
macos_use_wgpu = [ "engine/macos_use_wgpu" ]
windows_use_d3d9 = [ "engine/windows_use_d3d9" ]
windows_use_vulkan = [ "engine/windows_use_vulkan" ]
windows_use_wgpu = [ "engine/windows_use_wgpu" ]
