[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "open_t5_sp"
path = "src/main.rs"

[build-dependencies]
cfg_aliases = "0.1.1"

[dependencies]
libc = "0.2.0"
lazy_static = "1.4.0"
bitflags = "1.3.2"
num = "0.4.0"
arrayvec = "0.7.2"
env_logger = "0.10.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pollster = "0.2"
cfg-if = "1.0.0"
raw-window-handle = "0.5.0"
sscanf = "0.4.1"
gilrs = "0.10.0"
cstr = "0.2.11"
ash = { version = "0.37.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.5.0"
x11 = { version = "2.21.0", features = [ "xlib", "xrandr" ], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.0.3", optional = true, features = [ 
    "AppKit_all", "Foundation_all" 
] }
objc2 = { version =  "0.4.0", optional = true, features = [ "exception" ]}
x11 = { version = "2.21.0", features = [ "xlib", "xrandr" ], optional = true }
core-foundation = { version = "0.9.3", optional = true, features = [ 
    "mac_os_10_7_support", "mac_os_10_8_features", "uuid" 
] }
core-graphics = { version = "0.23.1", optional = true, features = [
    "elcapitan", "highsierra"
] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos"), not(target_os = "linux")))'.dependencies]
x11 = { version = "2.21.0", features = [ "xlib", "xrandr" ] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
            "Win32_Foundation", "Win32_Security",
            "Win32_Graphics_Gdi", "Win32_UI_Controls",
            "Win32_System_Threading","Win32_System_LibraryLoader", 
            "Win32_System_Environment", "Win32_UI_WindowsAndMessaging",
            "Win32_UI_Input_KeyboardAndMouse", 
            "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", 
            "Win32_System_Memory", "Win32_Storage_FileSystem", 
            "Win32_UI_Shell", "Win32_Graphics_Direct3D9",
            "Win32_Media_Audio_XAudio2", "Win32_System_WindowsProgramming",
            "Win32_System_SystemInformation",
            "Win32_System_Performance", 
            "Win32_System_Diagnostics_ToolHelp" ] }
wgpu = { version = "0.17.0", optional = true }
nvapi-sys = "0.1.3"

[target.'cfg(not(all(windows, target_arch = "wasm32")))'.dependencies]
wgpu = { version = "0.17.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.26.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
discord-rich-presence = "0.2.3"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "windows")))'.dependencies]
sysinfo = "0.27.0"

[features]
default = []
linux_use_xlib = [ "x11" ]
linux_use_wayland = []
linux_use_vulkan = [ "ash" ]
linux_use_wgpu = [ "wgpu" ]
macos_use_xlib = [ "x11" ]
macos_use_appkit = [ "objc2", "icrate", "core-foundation", "core-graphics" ]
macos_use_metal = []
macos_use_vulkan = [ "ash" ]
macos_use_wgpu = [ "wgpu" ]
windows_use_d3d9 = []
windows_use_vulkan = [ "ash" ]
windows_use_wgpu = [ "wgpu" ]
